added free tickets and events

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,14 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/web3.min.js"></script>
     <script src="js/truffle-contract.js"></script>
+    <script src="js/sha256.js"></script>
     <script src="js/app.js"></script>
 
+    <input type="text" id="email" name="ticketHash">
     <button class="btn-claimTicket" type="button" data-id="0">Claim Ticket</button>
+    </br>
+    <input type="text" id="ticketHash" name="ticketHash">
+    <button class="btn-freeTicket" type="button" data-id="1"> Free Ticket</button>
 
   </body>
 </html>
